test/org/midica/testfiles/failing/cond-second-with-whitespace.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if $x==5 5
	0  c  /4
}
